--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ cffi==1.12.2
 chardet==3.0.4
 colorama==0.4.1
 cryptography==2.6.1
+dj-database-url==0.5.0
 Django==1.11.20
 django-filter==2.1.0
 django-mysql==3.0.0.post1
 django-taggit==1.1.0
 djangorestframework==3.6.2
 et-xmlfile==1.0.1
+gunicorn==19.9.0
 httpie==1.0.2
 idna==2.8
 jdcal==1.4.1
@@ -17,6 +19,7 @@ Markdown==3.1.1
 mysqlclient==1.4.2
 openpyxl==2.6.2
 Pillow==6.0.0
+psycopg2==2.8.2
 pycparser==2.19
 Pygments==2.4.0
 PyMySQL==0.9.3
